--- a/Secrets/res/layout/dialog_password.xml
+++ b/Secrets/res/layout/dialog_password.xml
@@ -14,8 +14,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
-        android:hint="@string/password"
-        android:text="aaa"/>
+        android:hint="@string/password"/>
 	
     
 
